longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/target: wwww.xxxx.yyyy.zzzz
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-type: basic'
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  tls:
  - hosts:
    - longhorn.sxb1.region.xxxx.fr
    secretName: longhorn-tls
  ingressClassName: nginx
  rules:
  - host: longhorn.sxb1.region.xxxx.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
